# lstar-rocq

./: .gitignore  CHANGES.md  Makefile  README.md  _RocqProject  build.sh  dune-project  lstar-rocq.install  lstar-rocq.opam  lstar.install  lstar.opam  lstar.opam.template
docs/: Automata.html  DFA.html  ExtrOptimizations.html  Extraction.html  KV.html  Language.html  ListLemmas.html  Lstar.html  RS.html  SetLemmas.html  TTT.html  Teacher.html  index.html  index_axiom_D.html  index_axiom_L.html  index_axiom_M.html  index_axiom_O.html  index_axiom_R.html  index_axiom_S.html  index_axiom_T.html  index_constructor_K.html  index_constructor_T.html  index_definition_A.html  index_definition_D.html  index_definition_E.html  index_definition_F.html  index_definition_G.html  index_definition_I.html  index_definition_K.html  index_definition_L.html  index_definition_M.html  index_definition_N.html  index_definition_R.html  index_definition_S.html  index_definition_T.html  index_definition_U.html  index_global_A.html  index_global_D.html  index_global_E.html  index_global_F.html  (+61 more)
examples/: alternating.ml  alternating_socket.ml  div7.ml  dune  gen_example_pngs.sh  mod3.ml  suffix.ml  traffic.ml  vending.ml
lib/: Datatypes.ml  Extraction.v  List.ml  ListLemmas.ml  Lstar.ml  Lstar.mli  SocketTeacher.ml  Teacher.ml  dune
theories/: Automata.v  DFA.v  ExtrOptimizations.v  Extraction.v  KV.v  Language.v  ListLemmas.v  Lstar.v  NLstar.v  RS.v  SetLemmas.v  TTT.v  Teacher.v  dune
theories/algorithms/: KV.v  Lstar.v  NLstar.v  RS.v  TTT.v
theories/algorithms/KV/: KV_Mealy_Binary.v  KV_Moore.v  KV_Moore_Binary.v
theories/algorithms/Lstar/: Lstar.v  Lstar_DFA.v  Lstar_Mealy.v  Lstar_Moore.v
theories/algorithms/TTT/: TTT_DFA.v  TTT_Mealy_Binary.v  (+1 more)
theories/automata/: Alphabet.v  DFA.v  Mealy.v  Moore.v  NFA.v
theories/checkers/: only_http.v  tls_handshake.v
