(rocq.extraction
 (prelude Extraction)
 (extracted_modules
  Lstar_DFA
  Lstar_Moore
  Lstar_Mealy
  KV_DFA
  KV_Moore_Binary
  KV_Mealy_Binary
  TTT_DFA
  TTT_Moore_Binary
  TTT_Mealy_Binary
  Datatypes
  Bool
  DFA
  NFA
  Mealy
  Moore
  Alphabet
  Specif
  ListLemmas
  List
  ListDef
  NLstar
  PeanoNat
  Nat
  RS
  SetLemmas)
 (theories Stdlib lstar))

(library
 (name lstar)
 (public_name lstar)
 (modules :standard)
 (wrapped false)
 (flags
  (:standard -w -20))
 (libraries unix))
